Fix CORS and security for Render/Postman access